tp4/manifests/80-greedy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greedy
  namespace: guestbook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greedy
  template:
    metadata:
      labels:
        app: greedy
    spec:
      containers:
      - name: stress
        image: progrium/stress
        args: ["--cpu", "2", "--timeout", "600s"]
        resources:
          requests:
            cpu: "1500m"
            memory: "256Mi"
          limits:
            cpu: "2000m"
            memory: "512Mi"
