tp4/manifests/41-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: guestbook
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
      tier: front
  template:
    metadata:
      labels:
        app: webapp
        tier: front
    spec:
      imagePullSecrets:
      - name: scw-registry-credentials
      containers:
      - name: frontend
        image: rg.fr-par.scw.cloud/tp4-dauvel/webapp-frontend:v1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: guestbook
spec:
  selector:
    app: webapp
    tier: front
  ports:
  - port: 80
    targetPort: 80
